# smart_camera

./: .gitignore  .gitmodules  README.md
camera_app/app/: CMakeLists.txt
camera_app/detection/: CMakeLists.txt
camera_app/detection_plugin/: CMakeLists.txt  detection_thread.h  resizer.c
camera_app/include/: detection_thread.h  detector.h  gstmyfilter.h  sc_draw.h  sc_image.h  sc_logger.h  sc_paths.h  serial.h  serial_moves.h  video_pip.hpp
camera_app/includes/: detector.h  gstmyfilter.h
camera_app/sc_common/: CMakeLists.txt  unit_test.c
camera_app/sc_image/: CMakeLists.txt  sc_image.h
camera_app/serial/: CMakeLists.txt  test.c
camera_app/src/: CMakeLists.txt
camera_app/src/app/: CMakeLists.txt  main.cpp  video_pip.cpp
camera_app/src/detection/: CMakeLists.txt  detector.cpp
camera_app/src/detection_plugin/: CMakeLists.txt  detection_thread.c  gstmyfilter.c  resizer.c
camera_app/src/sc_common/: CMakeLists.txt  sc_logger.c  sc_paths.c
camera_app/src/sc_image/: CMakeLists.txt  sc_draw.c  sc_resizer.c
camera_app/src/serial/: CMakeLists.txt  serial.c  serial_moves.c
camera_app/test/detection/: CMakeLists.txt  test.c
controller/: turn.ino
controller/turn/: turn.ino
